# linux-notebook

./: .gitignore
CMake_专项笔记/: CMAKE_基础教程.md  CMAKE基础教程.md
CMake_专项笔记/CMAKE_基础教程_示例/demo_05/mydll/: myprint.hpp
CMake_专项笔记/CMAKE_基础教程_示例/demo_09/: CMakeLists.txt  README.md
CMake_专项笔记/CMAKE_基础教程_示例/demo_09/_engine_/: CMakeLists.txt
CMake_专项笔记/CMAKE_基础教程_示例/demo_09/_engine_/include/: core.hpp
CMake_专项笔记/CMAKE_基础教程_示例/demo_09/_engine_/include/common/: log.hpp
CMake_专项笔记/CMAKE_基础教程_示例/demo_09/_engine_/src/: main.cpp
CMake_专项笔记/CMAKE_基础教程_示例/demo_09/_vendor_/: CMakeLists.txt
CMake_专项笔记/CMAKE_基础教程_示例/demo_09/build-vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  _engine_.sln  cmake_install.cmake
CMake_专项笔记/CMAKE_基础教程_示例/demo_09/build-vs/_engine_/: _engine_.vcxproj  _engine_.vcxproj.filters  cmake_install.cmake
CMake_专项笔记/CMAKE_基础教程_示例/demo_09/build-vs/_vendor_/: cmake_install.cmake
CMake_专项笔记/CMAKE_基础教程_示例/demo_09/build-vs/_vendor_/eigen/: cmake_install.cmake
CMake_专项笔记/CMAKE_基础教程_示例/demo_09/build-vs/_vendor_/opencv/: cmake_install.cmake
CMake_专项笔记/CMAKE_基础教程_示例/demo_09/build-vs/_vendor_/spdlog/: cmake_install.cmake
CMake_专项笔记/CMAKE_基础教程_示例/demo_09/build-vs/_vendor_/tomlplusplus/: cmake_install.cmake
CMake_专项笔记/CMAKE_基础教程_示例/demo_3rdlib/: CMakeLists.txt
CMake_专项笔记/CMAKE_基础教程_示例/demo_3rdlib/3rdlibs/: CMakeLists.txt
CMake_专项笔记/CMAKE_基础教程_示例/demo_vcpkg/: CMakeLists.txt
Docker专项笔记/: Docker基础.md
FFmpeg_专项笔记/: FFmpeg简要手册.md
Git_专项笔记/: GIT专项笔记01.md
Linux_A_入门基础专项笔记/: 01linux安装.txt  02.Linux基本操作.txt  03.Linux磁盘及文件系统管理.txt  06.Linux网络基本配置.txt
Linux_C_进阶运维专项笔记/: 02_三剑客之grep.md  04_三剑客之awk.md  06_定时任务.md  09_存储介质管理.md
MySQL_专项笔记/: MYSQL数据库课程 01 安装及基本配置.txt  MYSQL数据库课程 02 基本操作.txt  MYSQL数据库课程 03 04 05 06 SQL语言.txt  MYSQL数据库课程 07 用户管理.txt  MYSQL数据库课程 08 权限管理.txt  MYSQL数据库课程 09 备份还原数据库.txt  MYSQL数据库课程 10 数据库字符编码设置.txt
文件同步管理专项笔记/: Rsync工具.md
编程_专项笔记/cpp/: OpenCASCADE-培训.md
编程_专项笔记/dotnet/: dotnet_async.md  dotnet_cli.md
编程_专项笔记/python/: pythonocc环境配置.md
编程_专项笔记/python/pythonocc-ui-code/: pyocc_pyqt_ui.py  pyocc_pyside_ui.py  window_demo.ui
(+8 files in other folders)
